--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles/styles.scss",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/flag-icon-css/sass/flag-icon.scss"
             ],
             "scripts": []
           },
