--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "ngx-swiper-wrapper": "^7.2.1",
     "rxjs": "~6.3.3",
