--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "postinstall": "ng build --aot --prod",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -20,9 +21,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "ngx-swiper-wrapper": "^7.2.1",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
